--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "description": "Lightweight and simple carousel with no dependencies.",
   "main": "lib/index.js",
+  "typings": "lib/index.d.ts",
   "scripts": {
-    "prepublish": "npm run build && npm run build:aot",
-    "build": "node_modules/.bin/tsc",
-    "build:aot": "node_modules/.bin/ngc -p tsconfig-aot.json"
+    "build": "node_modules/.bin/ngc -p tsconfig-aot.json"
   },
   "repository": {
     "type": "git",
@@ -17,7 +16,8 @@
     "angular2",
     "typescript",
     "siema",
-    "component"
+    "component",
+    "carousel"
   ],
   "author": "Alexander Zhukov <lexzhukovpro@gmail.com>",
   "license": "MIT",
@@ -25,19 +25,26 @@
     "url": "https://github.com/LexZhukov/ngx-siema/issues"
   },
   "homepage": "https://github.com/LexZhukov/ngx-siema#readme",
-  "dependencies": {
-    "@angular/common": "^2.4.4",
-    "@angular/core": "^2.4.4",
-    "@angular/forms": "^2.4.4",
-    "rxjs": "^5.0.3",
-    "zone.js": "0.7.2"
+  "peerDependencies": {
+    "@angular/common": "^2.4.5",
+    "@angular/core": "^2.4.5",
+    "@angular/forms": "^2.4.5",
+    "siema": "^1.1.1"
   },
   "devDependencies": {
-    "@angular/compiler": "^2.4.4",
-    "@angular/compiler-cli": "^2.4.4",
-    "@angular/platform-server": "^2.4.4",
-    "@types/node": "^7.0.1",
-    "@types/siema": "^1.0.0",
-    "typescript": "^2.1.5"
+    "@angular/common": "^2.4.5",
+    "@angular/compiler": "^2.4.5",
+    "@angular/compiler-cli": "^2.4.5",
+    "@angular/core": "^2.4.5",
+    "@angular/forms": "^2.4.5",
+    "@angular/platform-browser": "^2.4.5",
+    "@angular/platform-server": "^2.4.5",
+    "@types/node": "^7.0.4",
+    "codelyzer": "^2.0.0-beta.4",
+    "rxjs": "^5.0.3",
+    "siema": "^1.1.1",
+    "tslint": "^4.4.2",
+    "typescript": "^2.1.5",
+    "zone.js": "^0.7.2"
   }
 }
